Replaced Kvantum with GTK3 Adwaita-Qt.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -96,8 +96,8 @@ bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, ~/.bin/full-capture
 bind = $mod SHIFT, S, exec, ~/.bin/region-capture
-bind = , F9, pass, class:^(com\.obsproject\.Studio)$
-bind = , F10, pass, class:^(com\.obsproject\.Studio)$
+bind = , F12, pass, class:^(com\.obsproject\.Studio)$
+bind = ALT SHIFT, P, pass, class:^(com\.obsproject\.Studio)$
 
 # Window navigation 
 bind = $mod, h, movefocus, l
@@ -132,6 +132,8 @@ decoration {
     }
     rounding = 5
     rounding_power = 2
+    # active_opacity = 1.0
+    # inactive_opacity = 0.8
 }
 decoration:shadow {
     enabled = true
