Added shadows back to inactive borders.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,11 +2,16 @@
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.bin/power-saver
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+
+# Cursor configuration
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
+cursor {
+    inactive_timeout = 30
+    no_hardware_cursors = true
+}
 
 # Startup applications
 exec-once = wbg ~/Pictures/Wallpapers/XP.jpg
@@ -39,7 +44,7 @@ input {
 # Default apps
 $mod = SUPER
 $term = foot
-$fm = foot -e lf
+$fm = foot -e --title=lf lf
 $fm-alt = nautilus
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
@@ -115,7 +120,6 @@ bind = $mod SHIFT, j, movewindow, d
 
 # Stylish window/layer rules
 windowrulev2 = workspace, class:^(foot)$, follow=active
-windowrulev2 = noshadow, focus:0
 windowrulev2 = float, class:^(imv)$
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
@@ -146,8 +150,8 @@ general {
     allow_tearing = false
     gaps_in = 6
     gaps_out = 12
-    col.active_border = rgba(404040ff)
-    col.inactive_border = rgba(35353580)
+    col.active_border = rgba(494949ff)
+    col.inactive_border = rgba(30303080)
     border_size = 2
 }
 # Layouts
