--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,8 +44,8 @@ input {
 # Default apps
 $mod = SUPER
 $term = foot
-$fm = foot -e --title=lf lf
-$fm-alt = nautilus
+$fm = nautilus
+$fm-alt = foot -e --title=lf lf
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
 
@@ -132,7 +132,7 @@ decoration {
         ignore_opacity = false
         xray = false
     }
-    rounding = 4
+    rounding = 5
     rounding_power = 2
     # active_opacity = 1.0
     # inactive_opacity = 0.8
