Replaced Impala with NMGUI again.

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 {
     "include": "~/.config/waybar/modules.json",
-    "layer": "bottom",
+    "layer": "top",
     "position": "top",
     "height": 28,
     "spacing": 6,
