Moved to a more TUI Based environment.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,8 +44,8 @@ input {
 # Default apps
 $mod = SUPER
 $term = foot
-$fm = nautilus
-$fm-alt = foot -e --title=lf lf
+$fm = foot -e --title=lf lf
+$fm-alt = nautilus
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
 
