--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -119,6 +119,7 @@ bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
 # Stylish window/layer rules
+windowrulev2 = noshadow, focus:0
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
@@ -149,7 +150,7 @@ general {
     gaps_in = 5
     gaps_out = 10
     col.active_border = rgba(505050ff)
-    col.inactive_border = rgba(25252580)
+    col.inactive_border = rgba(29292980)
     border_size = 2
 }
 # Layouts
