Changed rounding and added shadows back to inactive borders  on windows.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -119,7 +119,7 @@ bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
 # Stylish window/layer rules
-windowrulev2 = noshadow, focus:0
+# windowrulev2 = noshadow, focus:0
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
@@ -133,7 +133,7 @@ decoration {
         ignore_opacity = false
         xray = false
     }
-    rounding = 4
+    rounding = 5
     rounding_power = 2
     # active_opacity = 1.0
     # inactive_opacity = 0.8
@@ -150,7 +150,7 @@ general {
     gaps_in = 5
     gaps_out = 10
     col.active_border = rgba(505050ff)
-    col.inactive_border = rgba(29292980)
+    col.inactive_border = rgba(25252580)
     border_size = 2
 }
 # Layouts
