--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "zsh/.antidote"]
     path = zsh/.antidote
     url = https://github.com/mattmc3/antidote.git
+[submodule "zsh/.powerlevel10k"]
+	path = zsh/.powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
+[submodule "zsh/.p10k"]
+	path = zsh/.p10k
+	url = https://github.com/romkatv/powerlevel10k.git
