--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -6,6 +6,10 @@ resize-by-cells=no
 [scrollback]
 indicator-position=none
 
+[cursor]
+blink=true
+blink-rate=500
+
 [main]
 gamma-correct-blending=no
 
