--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -143,10 +143,11 @@ general {
     allow_tearing = false
     gaps_in = 5
     gaps_out = 10
-    col.active_border = rgba(505050ff)
-    col.inactive_border = rgba(25252580)
+    col.active_border = rgb(505050)
+    col.inactive_border = rgba(252525CC)
     border_size = 2
 }
+
 # Layouts
 dwindle {
     pseudotile = yes
