Added some weird stuff.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,6 +2,7 @@
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.bin/power-saver
+exec-once = ~/.bin/power-alert
 
 # Cursor configuration
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
@@ -52,6 +53,7 @@ $menu = rofi -show drun
 # Volume Control
 bind = $mod, equal, exec, swayosd-client --output-volume raise
 bind = $mod, minus, exec, swayosd-client --output-volume lower
+bind = $mod, 0, exec, swayosd-client --output-volume mute-toggle
 bind = $mod SHIFT, equal, exec, swayosd-client --brightness raise
 bind = $mod SHIFT, minus, exec, swayosd-client --brightness lower
 bindl = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
@@ -70,12 +72,18 @@ bind = $mod, 3, workspace, 3
 bind = $mod, 4, workspace, 4
 bind = $mod, 5, workspace, 5
 bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
 bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
 
 # Window & Session Management
 bind = $mod SHIFT, C, killactive
