--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ exec-once = ~/.bin/power-saver
 exec-once = ~/.bin/power-alert
 
 # Cursor configuration
+ecosystem:no_update_news = true
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
@@ -29,7 +30,7 @@ binds {
 }
 
 # Monitor configuration
-monitor = ,1920x1080@144,auto,1.0
+monitor = eDP-1,1920x1080@120,auto,1.0
 exec-once = brightnessctl set 80%
 
 # Device configurations
@@ -164,10 +165,6 @@ dwindle {
 
 master {
     mfact = 0.5
-}
-
-gestures {
-    workspace_swipe = off
 }
 
 # Disable animations
