Full NixOS configuration files.

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -24,7 +24,7 @@
             <string>emoji</string>
         </test>
         <edit name="family" mode="prepend" binding="same">
-            <string>Noto Sans Emoji</string>
+            <string>Noto Color Emoji</string>
         </edit>
     </match>
 
