--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
 # Utilities
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = ~/.bin/power-saver
-exec-once = ~/.bin/power-alert
+exec-once = power-alert
+exec-once = power-saver
 
 # Cursor configuration
 ecosystem:no_update_news = true
@@ -35,7 +35,7 @@ exec-once = brightnessctl set 80%
 
 # Device configurations
 input {
-    follow_mouse = 0
+    follow_mouse = 1
     kb_options = caps:escape
         touchpad {
             natural_scroll = true
@@ -96,15 +96,15 @@ bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
-bind = $mod SHIFT, X, exec, ~/.bin/power-menu
+bind = $mod SHIFT, X, exec, power-menu
 bind = $mod, w, exec, pkill waybar && waybar
 bind = $mod, b, exec, $browser
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0
 bind = $mod SHIFT, D, exec, hyprpicker -a
-bind = $mod, S, exec, ~/.bin/full-capture
-bind = $mod SHIFT, S, exec, ~/.bin/region-capture
+bind = $mod, S, exec, full-capture
+bind = $mod SHIFT, S, exec, region-capture
 bind = , F12, pass, class:^(com\.obsproject\.Studio)$
 bind = ALT SHIFT, P, pass, class:^(com\.obsproject\.Studio)$
 
