Changed NixOS package layout.

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -12,6 +12,7 @@
     ],
     "modules-right": [
         "network",
+        "pulseaudio",
         "battery",
         "clock",
         "group/tray-expander",
