--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,5 @@
 # Utilities
 exec-once = swayosd-server
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = power-alert
 exec-once = power-saver
 
 # Cursor configuration
@@ -91,7 +89,7 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, exec, hyprctl dispatch togglefloating
-bind = , F11, fullscreen
+bind = ALT, RETURN, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
@@ -101,7 +99,7 @@ bind = $mod, w, exec, pkill waybar && waybar
 bind = $mod, b, exec, $browser
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
-bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0
+bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0 --action clipboard
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-capture
 bind = $mod SHIFT, S, exec, region-capture
