--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ binds {
 }
 
 # Monitor configuration
-monitor = eDP-1,1920x1080@144,auto,1.0
+monitor = eDP-1,1920x1080@120,auto,1.0
 exec-once = brightnessctl set 80%
 
 # Device configurations
@@ -102,8 +102,9 @@ bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0 --action clipboard
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-capture
-bind = $mod SHIFT, S, exec, region-capture
-bind = , F12, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod SHIFT, S, exec, hyprshot -zm region --clipboard-only
+bind = $mod, F1, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod, F12, pass, class:^(com\.obsproject\.Studio)$
 bind = ALT SHIFT, P, pass, class:^(com\.obsproject\.Studio)$
 
 # Window navigation 
@@ -121,7 +122,7 @@ bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
 # Stylish window/layer rules
-# windowrulev2 = noshadow, focus:0
+windowrulev2 = noshadow, focus:0
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 windowrulev2 = float,class:Walker
@@ -143,7 +144,7 @@ decoration {
 }
 decoration:shadow {
     enabled = true
-    range = 5
+    range = 8
 }
 
 # Window decorations
@@ -152,7 +153,7 @@ general {
     allow_tearing = false
     gaps_in = 5
     gaps_out = 10
-    col.active_border = rgb(505050)
+    col.active_border = rgb(494949)
     col.inactive_border = rgba(252525CC)
     border_size = 2
 }
