--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,8 +45,8 @@ input {
 # Default apps
 $mod = SUPER
 $term = foot
-$fm = foot -e --title=lf lf
-$fm-alt = nautilus
+$fm = thunar
+$fm-alt = foot -e --title=lf lf
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
 
@@ -125,7 +125,6 @@ bind = $mod SHIFT, j, movewindow, d
 windowrulev2 = noshadow, focus:0
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
-windowrulev2 = float,class:Walker
 
 # Disable decorations & effects
 decoration {
