--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = brightnessctl set 80%
 
 # Device configurations
 input {
-  follow_mouse = 1
+  follow_mouse = 0
   kb_options = caps:escape
   touchpad {
     natural_scroll = true
@@ -86,26 +86,26 @@ bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 
 # Window & Session Management
-bind = $mod SHIFT, C, killactive
-bind = $mod SHIFT, Q, exit
+bind = $mod SHIFT, c, killactive
+bind = $mod SHIFT, q, exit
 bind = $mod SHIFT, SPACE, exec, hyprctl dispatch togglefloating
 bind = ALT, RETURN, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
-bind = $mod SHIFT, X, exec, power-menu
+bind = $mod SHIFT, x, exec, power-menu
 bind = $mod, w, exec, pkill waybar && waybar
 bind = $mod, b, exec, $browser
-bind = $mod, f, exec, $fm
-bind = $mod SHIFT, f, exec, $fm-alt
+bind = $mod, e, exec, $fm
+bind = $mod SHIFT, e, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0 --action clipboard
-bind = $mod SHIFT, D, exec, hyprpicker -a
-bind = $mod, S, exec, full-capture
-bind = $mod SHIFT, S, exec, hyprshot -zm region --clipboard-only
-bind = $mod, F1, pass, class:^(com\.obsproject\.Studio)$
-bind = $mod, F12, pass, class:^(com\.obsproject\.Studio)$
-bind = ALT SHIFT, P, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod SHIFT, d, exec, hyprpicker -a
+bind = $mod, s, exec, full-capture
+bind = $mod SHIFT, s, exec, hyprshot -zm region --clipboard-only
+bind = $mod, f1, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod, f12, pass, class:^(com\.obsproject\.Studio)$
+bind = ALT SHIFT, p, pass, class:^(com\.obsproject\.Studio)$
 
 # Window navigation 
 bind = $mod, h, movefocus, l
