--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ cursor {
 }
 
 # Startup applications
-exec-once = wbg ~/Pictures/Wallpapers/XP.jpg
+exec-once = wbg ~/pictures/Wallpapers/XP.jpg
 misc {
   force_default_wallpaper = 0
   disable_hyprland_logo = true
