--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,6 +15,10 @@ set -g status-left "#S"
 bind w split-window -v
 unbind d
 bind d split-window -h
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 bind r source-file "~/.config/tmux/tmux.conf"
 bind b set -g status
 bind f run "tmux neww ~/.config/scripts/tmux-session-dispensary.sh"
