foot color changes

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -18,19 +18,21 @@ gamma-correct-blending=no
 alpha=0.8
 foreground=dfdfdf
 background=1c1c1c
-regular0=353537
-regular1=865054
-regular2=5f7a5f
-regular3=a4965f
-regular4=5f7a8c
+
+# Dark / regular colors
+regular0=353535
+regular1=7f5b5b
+regular2=5f705f
+regular3=8c8260
+regular4=5f708c
 regular5=75607a
-regular6=6a8b8b
+regular6=5f7a7a
 regular7=dfdfdf
-bright0=404040  
-bright1=976061
-bright2=729a72
-bright3=a49a72
-bright4=72949a
-bright5=8c729a
-bright6=729a96
+bright0=505050
+bright1=9a7070
+bright2=729472
+bright3=a4926b
+bright4=7294a4
+bright5=9272a4
+bright6=72a4a4
 bright7=f1f1f1
