--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $term = foot
 $fm = thunar
 $fm-alt = foot -e --title=lf lf
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
-$menu = rofi -show drun
+$menu = tofi-drun
 
 # Volume Control
 bind = $mod, equal, exec, swayosd-client --output-volume raise
