--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -2,10 +2,10 @@ anchor = top
 drun-launch = true
 history = false
 width = 100%
-height = 25
+height = 27
 horizontal = true
 font-size = 13
-font = monospace
+font = Inter
 text-cursor=true
 prompt-text = ""
 placeholder-text=Type to search..
@@ -17,7 +17,7 @@ text-color = "#595959"
 selection-color = #dfdfdf
 min-input-width = 400
 result-spacing = 25
-padding-top = 2
+padding-top = 3
 padding-bottom = 0
 padding-left = 8
 padding-right = 0
