--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -9,12 +9,12 @@ font = Inter
 text-cursor=true
 prompt-text = ""
 placeholder-text=Type to search..
-placeholder-color=#454545
+placeholder-color=#494949
 outline-width = 0
 border-width = 0
 background-color = #1c1c1c
-text-color = "#595959"
-selection-color = #dfdfdf
+text-color = "#5f5f5f"
+selection-color = #fff
 min-input-width = 400
 result-spacing = 25
 padding-top = 3
