foot color changes

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -21,7 +21,7 @@ background=1c1c1c
 
 # Dark / regular colors
 regular0=353535
-regular1=7f5b5b
+regular1=865054
 regular2=5f705f
 regular3=8c8260
 regular4=5f708c
@@ -29,7 +29,7 @@ regular5=75607a
 regular6=5f7a7a
 regular7=dfdfdf
 bright0=505050
-bright1=9a7070
+bright1=976061
 bright2=729472
 bright3=a4926b
 bright4=7294a4
