--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,15 +1,14 @@
+# General configuration
 font=monospace:size=13.15
 pad=5x5 center
 dpi-aware=no
 resize-by-cells=no
 
+# Disable scrollbars
 [scrollback]
 indicator-position=none
 
-[cursor]
-blink=true
-blink-rate=500
-
+# Disable color correction
 [main]
 gamma-correct-blending=no
 
@@ -18,8 +17,6 @@ gamma-correct-blending=no
 alpha=0.8
 foreground=dfdfdf
 background=1c1c1c
-
-# Dark / regular colors
 regular0=353535
 regular1=865054
 regular2=5f705f
