--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -8,13 +8,13 @@ font-size = 13
 font = Inter
 text-cursor=true
 prompt-text = ""
-placeholder-text=Type to search..
+placeholder-text=Type to search...
 placeholder-color=#494949
 outline-width = 0
 border-width = 0
 background-color = #1c1c1c
-text-color = "#5f5f5f"
-selection-color = #fff
+text-color = "#696969"
+selection-color = #dfdfdf
 min-input-width = 400
 result-spacing = 25
 padding-top = 3
