--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,35 +1,35 @@
 # General configuration
-font=monospace:size=13.15
-pad=5x5 center
-dpi-aware=no
-resize-by-cells=no
+font = monospace:size=13.15
+pad = 5x5 center
+dpi-aware = no
+resize-by-cells = no
 
 # Disable scrollbars
 [scrollback]
-indicator-position=none
+indicator-position = none
 
 # Disable color correction
 [main]
-gamma-correct-blending=no
+gamma-correct-blending = no
 
 # Colorscheme
 [colors]
-alpha=0.8
-foreground=dfdfdf
-background=1c1c1c
-regular0=353535
-regular1=865054
-regular2=5f705f
-regular3=8c8260
-regular4=5f708c
-regular5=75607a
-regular6=5f7a7a
-regular7=dfdfdf
-bright0=505050
-bright1=976061
-bright2=729472
-bright3=a4926b
-bright4=7294a4
-bright5=9272a4
-bright6=72a4a4
-bright7=f1f1f1
+alpha = 0.8
+foreground = dfdfdf
+background = 1c1c1c
+regular0 = 353535
+regular1 = 865054
+regular2 = 5f705f
+regular3 = 8c8260
+regular4 = 5f708c
+regular5 = 75607a
+regular6 = 5f7a7a
+regular7 = dfdfdf
+bright0 = 505050
+bright1 = 976061
+bright2 = 729472
+bright3 = a4926b
+bright4 = 7294a4
+bright5 = 9272a4
+bright6 = 72a4a4
+bright7 = f1f1f1
