--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -15,7 +15,7 @@
             <string>monospace</string>
         </test>
         <edit name="family" mode="prepend" binding="same">
-            <string>JetBrainsMono Nerd Font Mono</string>
+            <string>MesloLGS Nerd Font Mono</string>
         </edit>
     </match>
 
