--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ set -g window-status-current-style "fg=blue bold"
 
 set -g status-interval 5
 set -g status-right '#{?client_prefix, _ ,}#(timew | awk "/^ *Total/ {print \$NF}") #[bg=green,fg=black,bold]#(timew | awk "/^ *Tracking/ {print \" \" \$NF \" \"}")#[bg=default]'
-set -g status-left "#S"
+set -g status-left ""
 
 bind w split-window -v
 unbind d
