--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -89,7 +89,7 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, c, killactive
 bind = $mod SHIFT, q, exit
 bind = $mod SHIFT, SPACE, exec, hyprctl dispatch togglefloating
-bind = ALT, F11, fullscreen
+bind = $mod, f, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
