Added rofi stuff into home

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 # Utilities
 exec-once = swayosd-server
 exec-once = power-saver
+exec-once = rm -rf ~/.config/rofi/config.rasi
+exec-once = mv ~/.config/rofi/config.rasi.backup ~/.config/rofi/config.rasi
 
 # Cursor configuration
 ecosystem:no_update_news = true
@@ -99,7 +101,7 @@ bind = $mod, w, exec, pkill waybar && waybar
 bind = $mod, b, exec, $browser
 bind = $mod, e, exec, $fm
 bind = $mod SHIFT, e, exec, $fm-alt
-bind = $mod, PERIOD, exec, rofimoji --prompt "" --max-recent 0 --action clipboard
+bind = $mod, PERIOD, exec, rofi -show emoji
 bind = $mod SHIFT, d, exec, hyprpicker -a
 bind = $mod, s, exec, full-capture
 bind = $mod SHIFT, s, exec, hyprshot -zm region --clipboard-only
