fixed rofi stuff

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 exec-once = swayosd-server
 exec-once = power-saver
 exec-once = rm -rf ~/.config/rofi/config.rasi
-exec-once = mv ~/.config/rofi/config.rasi.backup ~/.config/rofi/config.rasi
+exec-once = sh -c '[ -f ~/.config/rofi/config.rasi.backup ] && rm -f ~/.config/rofi/config.rasi && mv ~/.config/rofi/config.rasi.backup ~/.config/rofi/config.rasi'
 
 # Cursor configuration
 ecosystem:no_update_news = true
