--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $term = foot
 $fm = thunar
 $fm-alt = foot -e --title=lf lf
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
-$menu = tofi-drun
+$menu = rofi -show drun
 
 # Volume Control
 bind = $mod, equal, exec, swayosd-client --output-volume raise
