--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ input {
 # Default apps
 $mod = SUPER
 $term = foot
-$fm = thunar
+$fm = nemo
 $fm-alt = foot -e --title=lf lf
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
