--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -12,7 +12,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/pictures/Wallpapers/XP.jpg
+    path = ~/Pictures/Wallpapers/XP.jpg
     blur_passes = 2
 }
 
